Fix image hover effect in the city brakes section on mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1080,6 +1080,10 @@ hr {
         transition: 0.3s;
         display: block;
     }
+    #city-trips .top-trips-card:hover .img-box .image-desktop {
+        
+        display: none;
+    }
 
     .title {
         font-size: 2.3rem;
